--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack-dev-server --progress"
+    "watch": "webpack-dev-server --progress",
+    "start": "webpack --mode=development",
+    "build": "webpack --mode-production",
+    "dev": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +18,8 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.2.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "^3.11.0"
